# april

./: BACKEND.md  CONTEXT.md  FRONTEND.md  README.md  pitch-deck.html
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: config.py  main.py
backend/app/database/: models.py  session.py
backend/app/schemas/: api.py
backend/app/services/: browser_agent.py  chat_agent.py  fidelity_agent.py  field_loader.py  gusto_agent.py  pdf_parser.py
backend/data/: freetaxusa_fields.json  freetaxusa_fields_pass1_backup.json
backend/scripts/: scan_freetaxusa.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/_landing/: Closing.tsx  Content.tsx  Hero.tsx  Nav.tsx  WorksSection.tsx  shared.tsx
frontend/app/accounts/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/profile/: page.tsx
frontend/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  PDFUploadCard.tsx
frontend/components/filing/: FilingTimeline.tsx  FilingView.tsx  TerminalLog.tsx
frontend/components/layout/: Sidebar.tsx  TopNav.tsx
frontend/components/sections/: BankSection.tsx  CommonCreditsSection.tsx  CreditsSection.tsx  DeductionsSection.tsx  DependentsSection.tsx  FederalSummarySection.tsx  FilingStatusSection.tsx  Form1099Section.tsx  HealthInsuranceSection.tsx  IdentityProtectionSection.tsx  MiscSection.tsx  OtherCreditsSection.tsx  OtherIncomeSection.tsx  (+7 more)
frontend/hooks/: useFilingStream.ts
frontend/lib/: api.ts  dummyData.ts  sectionUtils.ts  types.ts  validation.ts
frontend/store/: index.ts
(+2 files in other folders)
